.deploy/imgproxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imgproxy-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - imgproxy.progapanda.org
    secretName: imgproxy-tls
  rules:
  - host: imgproxy.progapanda.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: imgproxy-imgproxy
            port:
              number: 80
